# ucd-cosmos-data.github.io

./: LICENSE  README.md  hugo.yaml
content/: _index.md  schedule.md
content/lab/: _index.md  lab0.md  lab1-1.md  lab1-2.md  lab1.md  lab10.md  lab11.md  lab12.md  lab13.md  lab2.md  lab3.md  lab4.md  lab5.md  lab6.md  lab7.md  lab8.md  lab9.md
content/lecture/: _index.md
content/project/: _index.md  index.md
static/files/: Bisection_animation.html  GD.ipynb  GD_animation.html  Markdown.md  Newton_animation.html  OOP.ipynb  matplotlib.ipynb  numerical_animation.html  numpy_mlp.ipynb  pandas.ipynb  plotly.ipynb  prompt_template.md  pyproject.toml  pytorch_basics.ipynb  scikit-learn01.ipynb
static/lecture/: API_CoinDesk_HandsOn.ipynb  AdaBoost_Regression.ipynb  Bagging_tree.ipynb  Bayes_Freq_Test.ipynb  Bias_variance.ipynb  Boosting_tree.ipynb  CART.ipynb  CLT.ipynb  CNN.ipynb  Clustering_measures.ipynb  Confidence_Interval.ipynb  Cross_validation.ipynb  Hierarchical_Clustering.ipynb  Hypothesis_Testing.ipynb  Iris_Draft.md  Iris_Instruction_Case_Study.md  K_means.ipynb  MLP.ipynb  Movie_Analysis_Revised.ipynb  Multiple_Testing.ipynb  OOB.ipynb  PCA.ipynb  Posterior_Computation.ipynb  Potential_Outcomes.ipynb  Random_Forest_Classification.ipynb  Random_Forest_Regression.ipynb  Rank-based_Tests.ipynb  Sleep_vs_TestScore_EDA.ipynb  Spectral_clustering.ipynb  Split_sample_validation.ipynb  Stacking_Regressor.ipynb  SyntheticDigits_Augmentation.ipynb  Transformer_Overview_Example.ipynb  Turning_Reviews_into_Data.ipynb  Variational_Inference.ipynb  (+10 more)
(+1 files in other folders)
